# tetriz

./: .gitignore  CMakeLists.txt
.github/workflows/: github-ci.yml
app/game/: CMakeLists.txt
app/game/src/: game_mp.cpp  game_sp.cpp
app/server/: CMakeLists.txt
app/server/src/: main.cpp  room.hpp
app/tetriz_mp/: CMakeLists.txt
app/tetriz_mp/src/: main.cpp
app/tetriz_sp/: CMakeLists.txt
app/tetriz_sp/src/: main.cpp
app/tetrizd/: CMakeLists.txt
app/tetrizd/src/: game_engine.hpp  room_list.hpp
lib/engine/: CMakeLists.txt
lib/engine/include/engine/: bounding_box.hpp  game.hpp  game_board.hpp  kick_table.hpp  offsets.hpp  rotation.hpp  tetromino.hpp  tetromino_bag.hpp
lib/logging/: CMakeLists.txt
lib/logging/include/logging/: logger.hpp
lib/networking/: CMakeLists.txt
lib/networking/include/networking/: epoll.hpp  socket.hpp
lib/networking/src/: epoll.cpp
lib/protocol/: CMakeLists.txt
lib/protocol/include/protocol/: protocol.hpp  serializers.hpp
lib/tui/: CMakeLists.txt
lib/tui/include/tui/: renderer.hpp
lib/util/: CMakeLists.txt
lib/util/include/util/: encoding.hpp  functional.hpp
src/: Context.hpp  CorruptedRequestException.h  MessageTokenizer.cpp  MessageTokenizer.h  Model.hpp  Player.cpp  Player.h  ProtoUtil.h  Protocol.cpp  Protocol.h  Response.cpp  Response.h  Room.cpp  Room.h  Server.cpp  Server.h  configuration.h  constants.h  crtp.hpp  epoll.cpp  epoll.hpp  logger.hpp  main.cpp  networking_socket.hpp  protocol_dispatch.cpp  protocol_dispatch.hpp  protocol_serialization.hpp  protocol_structs.hpp  util.h
src/engine/: bounding_box.hpp  coordinates.hpp  game.hpp  game_board.hpp  game_state.hpp  kick_table.hpp  offsets.hpp  tetromino.hpp  tetromino_bag.hpp  tetromino_shape.hpp
src/game/: CMakeLists.txt  game_mp.cpp  game_sp.cpp  renderer.hpp
src/proto/: protocol.hpp  serializers.hpp
src/server/: game_engine.hpp  main.cpp  room.hpp  room_list.hpp
src/util/: time.hpp  xoroshiro.hpp
test/: main.cpp  protocol_serialization.cpp
